--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.21.1",
-    "gatsby": "^5.13.7",
+    "gatsby": "^2.13.57",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   }
 }
