--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
   "name": "cdspurlock-static-site",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.0",
     "express": "^4.21.1",
-    "gatsby": "^2.13.57",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-transformer-remark": "^6.13.1",
-    "path-browserify": "^1.0.1",
-    "querystring-es3": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "stream-browserify": "^3.0.0",
+    "react-router-dom": "^6.27.0",
     "util": "^0.12.5"
   }
 }
