--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "util": "^0.12.5"
+    "express": "^4.21.1"
   }
 }
